// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConnectedUserAvatar /> should match snapshot when no user image is selected 1`] = `
<View
  accessibilityLabel="user-avatar-touchable"
  accessible={false}
  clearBg={true}
  hitSlop={
    Object {
      "bottom": 20,
      "left": 20,
      "right": 20,
      "top": 20,
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  resizeMode="cover"
  round={true}
  src={1}
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  testID="user-avatar-touchable"
  xxLarge={true}
>
  <View
    style={Object {}}
  >
    <Image
      accessibilityLabel="user-avatar"
      accessible={true}
      resizeMode="cover"
      source={1}
      style={
        Array [
          Object {
            "height": 90,
            "width": 90,
          },
          undefined,
        ]
      }
      testID="user-avatar"
    />
  </View>
</View>
`;

exports[`<ConnectedUserAvatar /> should match snapshot when user image is selected 1`] = `
<View
  accessibilityLabel="user-avatar-touchable"
  accessible={false}
  clearBg={true}
  hitSlop={
    Object {
      "bottom": 20,
      "left": 20,
      "right": 20,
      "top": 20,
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  resizeMode="cover"
  round={true}
  src={
    Object {
      "uri": "/var/application/DocumentDir/user-avatar.jpeg",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  testID="user-avatar-touchable"
  xxLarge={true}
>
  <View
    style={Object {}}
  >
    <Image
      accessibilityLabel="user-avatar"
      accessible={true}
      resizeMode="cover"
      source={
        Object {
          "uri": "/var/application/DocumentDir/user-avatar.jpeg",
        }
      }
      style={
        Array [
          Object {
            "height": 90,
            "width": 90,
          },
          undefined,
        ]
      }
      testID="user-avatar"
    />
  </View>
</View>
`;
